Added links and hover effects

--- a/index.html
+++ b/index.html
@@ -175,22 +175,24 @@
                     </p>
                 </div>
                 <div class="col-lg-7 col-md-7 wireframes">
-                    <div class="row">
-                        <div class="col-lg-6 col-md-6">
-                            <img src="images/1/11.png">
+                    <a target="_blank" href="http://www.asma-audit.com/">
+                        <div class="row">
+                            <div class="col-lg-6 col-md-6">
+                                <img src="images/1/11.png">
+                            </div>
+                            <div class="col-lg-6 col-md-6">
+                                <img src="images/1/12.png">
+                            </div>
                         </div>
-                        <div class="col-lg-6 col-md-6">
-                            <img src="images/1/12.png">
+                        <div class="row bottom">
+                            <div class="col-lg-6 col-md-6">
+                                <img src="images/1/13.png">
+                            </div>
+                            <div class="col-lg-6 col-md-6">
+                                <img src="images/1/14.png">
+                            </div>
                         </div>
-                    </div>
-                    <div class="row bottom">
-                        <div class="col-lg-6 col-md-6">
-                            <img src="images/1/13.png">
-                        </div>
-                        <div class="col-lg-6 col-md-6">
-                            <img src="images/1/14.png">
-                        </div>
-                    </div>
+                    </a>
                 </div>
             </div>
 
@@ -214,7 +216,9 @@
                         in promoting the school magazine among students and offering 
                         an insight into the team behind it.
                     </p>
-                    <img src="images/2/21.png">
+                    <a target="_blank" href="https://perspektiva.netlify.com/">
+                        <img src="images/2/21.png">
+                    </a>
                     <hr>
                     <img src="images/2/23.png">
                 </div>
@@ -246,20 +250,28 @@
                     <div class="row">
 
                         <div class="col-lg-6 col-md-6">
-                            <img src="images/3/31.png">
+                            <a target="_blank" href="https://nadjastojanovic.github.io/etch-a-sketch/">
+                                <img src="images/3/31.png">
+                            </a>
                         </div>
                         <div class="col-lg-6 col-md-6">
-                            <img src="images/3/32.png">
+                            <a target="_blank" href="https://nadjastojanovic.github.io/rock-paper-scissors/">
+                                <img src="images/3/32.png">
+                            </a>
                         </div>
 
                     </div>
                     <div class="row">
 
                         <div class="col-lg-6 col-md-6">
-                            <img src="images/3/33.png">
+                            <a target="_blank" href="https://nadjastojanovic.github.io/pomodoro-clock/">
+                                <img src="images/3/33.png">
+                            </a>
                         </div>
                         <div class="col-lg-6 col-md-6">
-                            <img src="images/3/34.png">
+                            <a target="_blank" href="https://nadjastojanovic.github.io/calculator/">
+                                <img src="images/3/34.png">
+                            </a>
                         </div>
 
                     </div>
@@ -277,13 +289,13 @@
             <div class="row">
 
                 <div class="col-lg-4 col-md-4">
-                    <a href="#"><i class="fab fa-github"></i></a>
+                    <a href="https://github.com/nadjastojanovic"><i class="fab fa-github"></i></a>
                 </div>
                 <div class="col-lg-4 col-md-4">
-                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="https://twitter.com/nadastouk"><i class="fab fa-twitter"></i></a>
                 </div>
                 <div class="col-lg-4 col-md-4">
-                    <a href="#"><i class="fas fa-envelope"></i></a>
+                    <a href="mailto:nadja.stojanovic@outlook.com"><i class="fas fa-envelope"></i></a>
                 </div>
 
             </div>
