--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div id="buttons">
 
                 <div id="links">
-                    <a href="#">RESUME</a>
+                    <a target="_blank" href="resume.pdf">RESUME</a>
                     <a data-scroll id="port" href="#portfolio">PORTFOLIO <img class="animated bounce slow infinite" src="images/two-down-chevron.png"></a>
                 </div>
                 <div id="social">
