Added internship experience

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Nađa Stojanović</title>
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css?family=Exo:900|Petit+Formal+Script|Nunito:400,800|Hanuman|Skranji" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Exo:900|Montserrat|Petit+Formal+Script|Nunito:400,800|Hanuman|Skranji" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 
@@ -228,7 +228,7 @@
             <br><br>
 
             <span class="left-number">3</span>
-            <h1 class="left-h1" id="mini-h1">- PROJECTS</h1>
+            <h1 class="left-h1" id="mini-h1">MINI-PROJECTS</h1>
 
             <div class="row">
 
@@ -276,6 +276,43 @@
 
                     </div>
 
+                </div>
+
+            </div>
+
+            <span id="right-number">4</span>
+            <h1 id="right-h1" style="font-family:'Montserrat', serif;">WEB DEV INTERNSHIP</h1>
+            "
+            <div class="row intern-row">
+
+                <div class="col-lg-6 col-md-6 shwc shwc-left">
+                    
+                    <div class="row">
+                        <div style="margin-top: 20px;" class="col-lg-7 col-md-7">
+                                <a target="_blank" href="images/4/report.png"><img src="images/4/report.png"></a>
+                        </div>
+                        <div class="col-lg-5 col-md-5">
+                            <a target="_blank" href="images/4/prospeak2.png"><img src="images/4/prospeak2.png"></a>
+                            <a target="_blank" href="images/4/UVNAC Youth Club Banner.png"><img class="intern-design" src="images/4/UVNAC Youth Club Banner.png"></a>
+                            <a target="_blank" href="images/4/prison-internship.png"><img class="intern-design" src="images/4/prison-internship.png"></a>
+                        </div>
+                    </div>
+            
+                </div>
+
+                <div style="margin-top: -50px;" class="col-lg-6 col-md-6 dscr dscr-right">
+
+                    <p>I interned as a web developer and designer at the Urivi
+                        Vikram Charitable Trust or UVCT for short. UVCT is an Indian
+                        NGO promoting education among the youth.<br>
+                        As an intern, my responsibilities were maintaining the website - 
+                        updating and changing it when necessary. I designed banners and posters 
+                        for some of their workshops and events, as well as the annual report.<br>
+                        This experience taught me team work, collaboration and the importance
+                        of organization and time management. I am still in touch with UVCT and I 
+                        am thankful for my internship.
+                    </p>
+                    <a target="_blank" href="images/4/Parenting Work Group.png"><img style="width:80%;margin:0 40px 0 0;" src="images/4/Parenting Work Group.png"></a>
                 </div>
 
             </div>
